// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Snapshots should applies correct size classes 1`] = `
<div>
  <div
    class="alert alert--primary alert--md alert--shadow-none"
    role="alert"
  >
    <div
      class="alert__wrapper"
    >
      <div
        class="alert__body"
      >
        Alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots should apply '2xl' shadow classes 1`] = `
<div>
  <div
    class="alert alert--primary alert--md alert--shadow-2xl"
    role="alert"
  >
    <div
      class="alert__wrapper"
    >
      <div
        class="alert__body"
      >
        Alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots should apply '3xl' shadow classes 1`] = `
<div>
  <div
    class="alert alert--primary alert--md alert--shadow-3xl"
    role="alert"
  >
    <div
      class="alert__wrapper"
    >
      <div
        class="alert__body"
      >
        Alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots should apply 'critical' skin classes 1`] = `
<div>
  <div
    class="alert alert--critical alert--md alert--shadow-none"
    role="alert"
  >
    <div
      class="alert__wrapper"
    >
      <div
        class="alert__body"
      >
        Alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots should apply 'lg' shadow classes 1`] = `
<div>
  <div
    class="alert alert--primary alert--md alert--shadow-lg"
    role="alert"
  >
    <div
      class="alert__wrapper"
    >
      <div
        class="alert__body"
      >
        Alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots should apply 'md' shadow classes 1`] = `
<div>
  <div
    class="alert alert--primary alert--md alert--shadow-md"
    role="alert"
  >
    <div
      class="alert__wrapper"
    >
      <div
        class="alert__body"
      >
        Alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots should apply 'neutral' skin classes 1`] = `
<div>
  <div
    class="alert alert--neutral alert--md alert--shadow-none"
    role="alert"
  >
    <div
      class="alert__wrapper"
    >
      <div
        class="alert__body"
      >
        Alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots should apply 'none' shadow classes 1`] = `
<div>
  <div
    class="alert alert--primary alert--md alert--shadow-none"
    role="alert"
  >
    <div
      class="alert__wrapper"
    >
      <div
        class="alert__body"
      >
        Alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots should apply 'primary' skin classes 1`] = `
<div>
  <div
    class="alert alert--primary alert--md alert--shadow-none"
    role="alert"
  >
    <div
      class="alert__wrapper"
    >
      <div
        class="alert__body"
      >
        Alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots should apply 'secondary' skin classes 1`] = `
<div>
  <div
    class="alert alert--secondary alert--md alert--shadow-none"
    role="alert"
  >
    <div
      class="alert__wrapper"
    >
      <div
        class="alert__body"
      >
        Alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots should apply 'sm' shadow classes 1`] = `
<div>
  <div
    class="alert alert--primary alert--md alert--shadow-sm"
    role="alert"
  >
    <div
      class="alert__wrapper"
    >
      <div
        class="alert__body"
      >
        Alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots should apply 'success' skin classes 1`] = `
<div>
  <div
    class="alert alert--success alert--md alert--shadow-none"
    role="alert"
  >
    <div
      class="alert__wrapper"
    >
      <div
        class="alert__body"
      >
        Alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots should apply 'xl' shadow classes 1`] = `
<div>
  <div
    class="alert alert--primary alert--md alert--shadow-xl"
    role="alert"
  >
    <div
      class="alert__wrapper"
    >
      <div
        class="alert__body"
      >
        Alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots should render additional classes 1`] = `
<div>
  <div
    class="alert alert--primary alert--md alert--shadow-none other-class"
    role="alert"
  >
    <div
      class="alert__wrapper"
    >
      <div
        class="alert__body"
      >
        Alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots should render left slot content 1`] = `
<div>
  <div
    class="alert alert--primary alert--md alert--shadow-none"
    role="alert"
  >
    <div
      class="alert__left"
    >
      Left slot
    </div>
    <div
      class="alert__wrapper"
    >
      <div
        class="alert__body"
      >
        Alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots should render right slot content 1`] = `
<div>
  <div
    class="alert alert--primary alert--md alert--shadow-none"
    role="alert"
  >
    <div
      class="alert__wrapper"
    >
      <div
        class="alert__body"
      >
        Alert
      </div>
    </div>
    <div
      class="alert__right"
    >
      Right slot
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots should renders default component 1`] = `
<div>
  <div
    class="alert alert--primary alert--md alert--shadow-none"
    role="alert"
  >
    <div
      class="alert__wrapper"
    >
      <div
        class="alert__body"
      >
        Alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots should renders title 1`] = `
<div>
  <div
    class="alert alert--primary alert--md alert--shadow-none"
    role="alert"
  >
    <div
      class="alert__wrapper"
    >
      <div
        class="alert__title"
      >
        Title
      </div>
      <div
        class="alert__body"
      >
        Alert
      </div>
    </div>
  </div>
</div>
`;
